# Daedalus

./: .gitignore  AGENTS.md  CONTEXT.md  HANDOFF.md  NEXT_AGENT_JARVIS_LIVE_MODEL_DIAGNOSIS_2026-06-26.md  PRIORITIES.md  README.md  RECOVERY_STATUS.md  automate_inference_metrics.py  build-optimized.ps1  build-wsl.sh  node-event-loop-analysis.md  package.json  refactor_settings.py  seed-cron-jobs.sh
.claude/: launch.json
.github/workflows/: ci.yml
agents/: jarvis
docs/: BENCHMARK_2026-07-21.md  BENCHMARK_2026-07-21_TIER2.md  BENCHMARK_2026-07-21_TIER2B.md  COMPLETION_BACKLOG.md  DIAGNOSIS_ORCHESTRATION_SUPERVISION_2026-07-16.md  DIAGNOSIS_TOOLCALL_ORCHESTRATION_2026-07-03.md  EVAL_2026-07-21.md  EVAL_REPROBE_2026-07-21.md  HANDOFF_2026-07-22_REASONING_LIFT.md  HANDOFF_CHAT_POST_HANG.md  IMPLEMENTATION_PLAN_TOOLCALL_ORCHESTRATION_2026-07-03.md  MASTER_PLAN.md  NIGHTLY_SEMANTIC_EVAL.md  sse-stream-contract.md
docs/adr/: 0001-strangler-fig-off-hermes.md  000x-jarvis-bridge-ownership.md
docs/audits/: 2026-07-08-jarvis-overnight-cron-timeout-fd038ec25327.md
docs/issues/: post-phase-4-conductor-evolution.md
memory/: MEMORY.md  home-base-writable-path.md  jarvis-blank-screen-on-launch.md  jarvis-build-toolchain.md  jarvis-bun-sqlite-cross-boundary-ioerr.md  jarvis-model-profiles.md  jarvis-streaming-architecture.md  jarvis-tauri-listen-race.md  windows-hang-root-cause.md
scripts/: _smoke_proxy.py  _stream_capture.txt  _stream_test_body.json  _test_claude_cli_proxy_opencode_go.py  add_roadmap_actions.py  benchmark-jarvis-runtime.ps1  build-and-deploy.Tests.ps1  build-and-deploy.ps1  build-ui.sh  build-windows.ps1  claude_cli_proxy.py  dev-ui.sh  eval-failing-features-reprobe.ps1  hermes-verify-2026-07-13-priorities.py  launch.sh  opencode_go_openai_models.json  patch-evidence-sufficiency.py  quarantine-stale-desktop.ps1  recover_all.py  recover_from_transcripts.py  retro-correct-empty-stages.ts  run-nightly-semantic-eval.ps1  run-tier2b-benchmark.ps1  scan_antigravity.py  smoke-jarvis-runtime.ps1  tauri-dev.bat  tauri-dev.sh  verify-deploy.ps1  verify-priorities-2026-07-03-afternoon.py  verify.sh  verify_sse_relay.py
scripts/benchmark-tier2b/: README.md  (+3 more)
server-jarvis/: package.json  tsconfig.json
src-tauri/: Cargo.toml  build.rs  release_resource_staging.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cron_scheduler.rs  lib.rs  main.rs  supervisor.rs  wsl.rs
src-tauri/src/commands/: action_registry.rs  agents.rs  channels.rs  cron.rs  jarvis_commands.rs  legacy.rs  mcp.rs  memory.rs  mod.rs  models.rs  recovery_stubs.rs  sessions.rs  settings.rs  skills.rs  system.rs
src-tauri/src/db/: migrations.rs  mod.rs
src-tauri/src/jarvis/: bridge.rs  learning.rs  mod.rs  queue.rs  runner.rs  types.rs
src-tauri/src/jarvis/hermes/: commands.rs  mod.rs  process.rs  protocol.rs  state.rs
src-tauri/src/jarvis/memory/: age.rs  engine.rs  frontmatter.rs  mod.rs  paths.rs  relevance.rs  scanner.rs  types.rs
src-tauri/src/parsers/: mod.rs
src-tauri/src/types/: extra.rs  mod.rs
src-ui/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
tests/: __init__.py  test_automate_inference_metrics.py
workspace/: jarvis-provider-smoke.md
workspace/action-registry/: AGENTS.md  README.md  pyproject.toml
workspace/action-registry/config/: adapters.yaml
workspace/action-registry/data/: active.json  notifications.json  sync-state.json
workspace/action-registry/examples/: bootstrap.actions.json
workspace/action-registry/jobs/: schedule.json
workspace/action-registry/schemas/: action-item.schema.json
workspace/action-registry/src/action_registry/: __init__.py  approval.py  audit.py  briefing.py  cli.py  dedupe.py  lockfile.py  metrics.py  models.py  notifications.py  store.py  sync.py
workspace/action-registry/src/action_registry/adapters/: __init__.py  base.py  jarvis.py  jonesinsrc_products.py  jonesinsrc_website.py  prizepicks.py  snitch_llc.py
workspace/action-registry/tests/: test_adapters.py  test_briefing.py  test_dedupe.py  test_store.py
(+393 files in other folders)
